   messages would be disabled unless you reset the value in the menu or
   another "ultimate message" appeared.  In my stats testing I also found
   that if you saved in front of an exit and "GAME RESTORED" was still on
   the screen, flick the switch, messages again would be disabled.
   If you find other weird situations where it happens let me know.

09-03-13
 - Nothing crazy, but the game will tell you that you can't load games
   from older versions.

09-02-13
 - "-noexit" to disable exits in netgames.  Useful for DM maps.  Only works
   for valid netgames.  You can test it out with IPXSETUP.EXE -NODES 1
   -NOEXIT.
 - Had to shift the options menu up a bit since it was causing some glitches
   with the status bar.

09-01-13
 - Extended limits from wHeretic.  Should be able to play some larger maps
   from 1998-1999'ish.
   * MAXVISPLANES from 128 to 1024
   * MAXOPENINGS from SCREENWIDTH*64 to SCREENWIDTH*256
   * MAXDRAWSEGS from 256 to 1024
   * MAXVISSPRITES from 128 to 1024
   * Raised Save Game maximum file size from about ~196KB to ~1024KB(1MB)
   * Raised Save Game maximum string size from 24 to 256.
   * MAX_AMBIENT_SFX from 8 to 32.  Meant for allowing PC_LS.WAD to play.
     This could maybe cause issues on maps that are designed badly and have
     too many all fighting for sound space.  If you start getting weirdness
     with too many sounds and acting funky let me know and I will implement
     an alternative way to deal with the issue.

08-31-13
 - Added Headbob and Palette Flashing toggle to Options Menu.
 - "-cheats" parameter for coop cheating.  This CAN desync the game!
   Mainly useful for IDMUS changing.  But, try it out if you want.
 - "-noprecache" to skip precaching.
 - "-faststart" to disable the startup screen.  Also displays the older
   doom-style text output at startup.
 - "-novert" to disable mouse vertical movement.
 - HERESW.BAT to toggle between old and updated Heretic.

08-22-13
 - Torch is removed when you die.

07-12-13