@@ -91,19 +91,19 @@ tic.exe : $(LOCOBJS) $(GLOBOBJS) i_ibm.obj
  4gwbind 4gwpro.exe striptic.exe HERETIC.EXE -V 
  copy HERETIC.EXE HERETIC.UPD
  copy /Y HERETIC.EXE D:\GAMES\HERETIC
- copy /Y HERETIC.EXE D:\GAMES\HERETI~1
+ copy /Y HERETIC.EXE D:\GAMES\HERETIC\13
  copy /Y HERETIC.UPD D:\GAMES\HERETIC
- copy /Y HERETIC.UPD D:\GAMES\HERETI~1
+ copy /Y HERETIC.UPD D:\GAMES\HERETIC\13
  copy /Y HERETIC.ORG D:\GAMES\HERETIC
- copy /Y HERETIC.ORG D:\GAMES\HERETI~1
+ copy /Y HERETIC.ORG D:\GAMES\HERETIC\13
  copy /Y README.HTC D:\GAMES\HERETIC
- copy /Y README.HTC D:\GAMES\HERETI~1
+ copy /Y README.HTC D:\GAMES\HERETIC\13
  copy /Y CHANGES.TXT D:\GAMES\HERETIC
- copy /Y CHANGES.TXT D:\GAMES\HERETI~1
+ copy /Y CHANGES.TXT D:\GAMES\HERETIC\13
  copy /Y TODO.TXT D:\GAMES\HERETIC
- copy /Y TODO.TXT D:\GAMES\HERETI~1
+ copy /Y TODO.TXT D:\GAMES\HERETIC\13
  copy /Y HERESW.BAT D:\GAMES\HERETIC
- copy /Y HERESW.BAT D:\GAMES\HERETI~1
+ copy /Y HERESW.BAT D:\GAMES\HERETIC\13
 
 i_ibm.obj:
  wcc386 /zp1 /4r /zq /ei /j i_ibm.c
